# JogoDasCores

./: CMakeLists.txt  README.md
include/: Sprite.h
src/: HelloSprite.cpp  Sprite.cpp  main.cpp
